spade-tests/src/snapshots/spade_tests__typeinference__multiplication_errors_if_overflow.snap
---
source: spade-tests/src/typeinference.rs
---
entity main(a: int<14>, b: int<16>) -> int<32> {
    a * b
}


error: Expected type int<32>, got int<30>
  ┌─ testinput:2:5
  │
2 │     a * b
  │     ^^^^^ Expected int<32>
  │
  = note: Expected: 32
                in: int<32>
               Got: 30
                in: int<30>


